<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/profile_header">

        <Preference
            app:key="signature"
            app:title="@string/profile_title"
            app:summary="@string/edit_profile_settings"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preferences_header">

        <SwitchPreferenceCompat
            app:key="preferences"
            app:title="@string/pill_title" />

        <SwitchPreferenceCompat

            app:title="@string/senior_title" />
<!--            app:key="attachment"-->
<!--           app:dependency="preferences"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->


    </PreferenceCategory>

</PreferenceScreen>