<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.silvercare.view.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <argument
            android:name="userId"
            android:defaultValue="empty"
            app:argType="string" />

        <argument
            android:name="mobile"
            android:defaultValue="empty"
            app:argType="string" />
        <action
            android:id="@+id/action_FHome_to_FLogin"
            app:destination="@id/LoginPhoneNumberFragment"
            app:launchSingleTop="true"
            app:popUpTo="@+id/nav_graph"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.silvercare.view.activities.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.silvercare.view.activities.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>