<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.silvercare.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.LoginEnterEmail">

        <LinearLayout
            android:id="@+id/ll_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">



            <EditText
                android:id="@+id/et_email"
                style="?android:spinnerStyle"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/please_enter_your_email"
                android:textColorHint="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/would_you_like_to_receive_newsletter"
                android:layout_gravity="center_horizontal"
                android:checked="false" />

            <Button
                android:id="@+id/btn_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/finish" />


        </LinearLayout>

    </LinearLayout>
</layout>