<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.silvercare.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.LoginChooseUserTypeFragment">

        <LinearLayout
            android:id="@+id/ll_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <RadioButton
                    android:id="@+id/radio_caretaker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caretaker"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radio_elder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/senior" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/continues" />

        </LinearLayout>

    </LinearLayout>
</layout>